# rust-pois

./: .gitignore  API_FIX.md  BEFORE_AFTER.md  CONTRIBUTING.md  CUSTOMIZATION.md  Cargo.toml  DEPLOYMENT_CHECKLIST.md  INSTALL.md  LICENSE  LOGO_UPDATE.md  POIS_Test_Plan.md  README.md  README.txt  RELEASE_NOTES_v2.0.0.md  RELEASE_NOTES_v3.0.3.md  RELEASE_v3.1.0.md  ROADMAP.md  USE_CASES.md  factory_reset.sh  fix_default_channel.sh  groups-rbac-plan.md  install.sh  migration-demo.sql  uninstall.sh
benches/: sesame_overhead.rs
docs/: SESAME.md  SESAME_paper_errata.md  SESAME_reconciliation.md  benchmarks.md
migrations/: 0001_init.sql  0002_event_logging.sql  0003_add_jwt_auth.sql  0004_add_multitenancy.sql  0005_password_changes.sql  0005_password_changes.sql.backup  0006_sesame_channel_policy.sql  0007_event_sesame_tier.sql  0008_event_scte35_b64.sql  0009_templates_and_projects.sql  0010_template_default.sql  0011_groups_rbac.sql  0012_must_change_password.sql
scripts/: bench_to_md.py  run_c6i_bench.sh
src/: auth_handlers.rs  backup.rs  esam.rs  event_logging.rs  jwt_auth.rs  lib.rs  main.rs  models.rs  password_change.rs  rbac.rs  rules.rs  scte35.rs  sesame_axum.rs  template_library.rs  templates.rs  tools_api.rs
src/sesame/: canonical.rs  keys.rs  message.rs  mod.rs  replay.rs  tier1_hmac.rs  tier2_authz.rs  tier3_aead.rs
static/: _header.html  admin.html  app.css  app.js  change-password.html  channels.html  docs.html  events.html  groups.html  header.js  login.html  monitor.html  openapi.yaml  projects.html  settings.html  test_token.html  tokens.html  tools.html  users.html
static/images/: site.webmanifest
