[package]
name = "pois-esam-server"
version = "3.12.6"
edition = "2021"

[dependencies]
# web framework + runtime
axum = { version = "0.8", features = ["ws", "macros"] }
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
axum-extra = "0.9"
futures = "0.3"
tokio = { version = "1.40.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }

# http helpers
tower-http = { version = "0.5.2", features = ["cors", "trace", "fs"] }

# XML, JSON, base64
quick-xml = { version = "0.31.0", features = ["serialize"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
base64 = "0.22.1"

# database
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }

# logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }

# JWT authentication
argon2 = { version = "0.5", features = ["std"] }
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"

# misc utils
uuid = { version = "1.10.0", features = ["v4", "serde"] }
time = { version = "0.3.36", features = ["macros", "serde", "formatting", "parsing"] }
anyhow = "1.0.86"

# SESAME (ANSI/SCTE 130-9) protocol — now its own crate (single source of truth),
# extracted byte-for-byte from this repo's former src/sesame/. Pure-Rust, no
# DB/axum deps; brings its own RustCrypto stack (aes-gcm/hmac/sha2/…). rust-pois
# consumes it via the `pois_esam_server::sesame` re-export in src/lib.rs. Keep
# DEFAULT features (incl. `rng`) on — we use sign_response + random_iv.
# Pinned to the released tag v0.1.2. The crates.io package was renamed
# `sesame` -> `sesame-esam` (the `[lib] name` stays `sesame`), so `package` is
# set explicitly while the local crate name stays `sesame`. v0.1.2's src/ is
# byte-identical to the former rev 122d0f1 (only Cargo.toml/README/LICENSE/example
# changed), so this is a provenance update with no wire/behavior change.
sesame = { git = "https://github.com/bokelleher/sesame-sdk", tag = "v0.1.2", package = "sesame-esam" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

# Expose the SESAME core as a library so benches/tests use it without the HTTP
# stack. The binary (main.rs) consumes it as `pois_esam_server::sesame`.
[lib]
name = "pois_esam_server"
path = "src/lib.rs"

[[bin]]
name = "pois-esam-server"
path = "src/main.rs"

[[bench]]
name = "sesame_overhead"
harness = false